--- a/css/style.css
+++ b/css/style.css
@@ -991,17 +991,14 @@ body {
 }
 
 .about__column--left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  display: block;
+  padding-top: 170px;
   padding-bottom: 60px;
 }
 
 .about__title {
+  position: absolute;
+  top: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 44px;
@@ -3126,8 +3123,55 @@ body {
     margin-bottom: 60px;
   }
 
+  .about__column--left {
+    position: absolute;
+    top: 0;
+    left: 15px;
+    width: 100%;
+    display: block;
+    text-align: left;
+    padding-top: 20%;
+  }
+
+  .about__title {
+    width: 100%;
+  }
+
+  .about__text {
+    display: none;
+  }
+
+  .about__text--2 {
+    display: none;
+  }
+
   .about__column--right {
     padding-bottom: 120px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+
+  .about__content {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .about__offer {
+    top: -70px;
+    left: 15px;
+  }
+
+  .about__slider {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
   }
 
   .small-screen__buttons {
