--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,7 @@ body._lock {
 body {
   font-family: "Ubuntu", sans-serif;
   color: #fff;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -543,6 +544,13 @@ body {
   overflow: hidden;
 }
 
+.swiper-pagination-vertical.swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+}
+
 .swiper-pagination-vertical {
   height: 100%;
   max-height: 170px;
@@ -561,13 +569,7 @@ body {
           align-items: center;
   margin-bottom: 30px;
   margin-right: 30px;
-}
-
-.swiper-pagination-vertical.swiper-pagination-bullets .swiper-pagination-bullet,
-.swiper-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
-  width: 15px;
-  height: 15px;
-  background-color: #fff;
+  z-index: 2 !important;
 }
 
 .slide-bottom {
@@ -624,7 +626,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  z-index: 99;
+  z-index: 10;
 }
 
 .logo {
@@ -633,6 +635,8 @@ body {
   display: flex;
   cursor: pointer;
   padding: 0 15px;
+  position: relative;
+  z-index: 11;
 }
 
 .logo__icon {
@@ -650,11 +654,26 @@ body {
   white-space: nowrap;
 }
 
+.header__menu {
+  display: block;
+  -webkit-transition: -webkit-transform 0.4s ease 0;
+  transition: -webkit-transform 0.4s ease 0;
+  -o-transition: transform 0.4s ease 0;
+  transition: transform 0.4s ease 0;
+  transition: transform 0.4s ease 0, -webkit-transform 0.4s ease 0;
+  position: relative;
+}
+
+.menu {
+  position: relative;
+}
+
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding: 0 15px;
+  position: relative;
 }
 
 .menu__item:not(:last-child) {
@@ -693,6 +712,9 @@ body {
 
 .header__btn {
   padding: 0 15px;
+  position: relative;
+  top: 0;
+  z-index: 11;
 }
 
 .btn {
@@ -731,6 +753,8 @@ body {
   -webkit-transition: color 0.4s ease;
   -o-transition: color 0.4s ease;
   transition: color 0.4s ease;
+  position: relative;
+  z-index: 11;
 }
 
 .header__tel:hover {
@@ -792,10 +816,11 @@ body {
 }
 
 .menu__icon._active::after {
-  bottom: 50%;
+  bottom: 45%;
   -webkit-transform: rotate(45deg) translate(0px, 50%);
       -ms-transform: rotate(45deg) translate(0px, 50%);
           transform: rotate(45deg) translate(0px, 50%);
+  width: 95%;
 }
 
 .swiper {
@@ -813,6 +838,7 @@ body {
   background-position: center;
   background-size: cover;
   position: relative;
+  background-color: #000;
 }
 
 .intro::after {
@@ -824,8 +850,8 @@ body {
   height: 100%;
   background-color: #000;
   opacity: 0.4;
-  background: -o-radial-gradient(50% 45.57%, 45.97% 54.43%, rgba(23, 26, 28, 0) 50.28%, rgba(23, 26, 28, 0.00225974) 50.29%, rgba(4, 5, 5, 0.820343) 58.72%, rgba(5, 5, 6, 0.792703) 80.08%, #000000 87.89%);
-  background: radial-gradient(45.97% 54.43% at 50% 45.57%, rgba(23, 26, 28, 0) 50.28%, rgba(23, 26, 28, 0.00225974) 50.29%, rgba(4, 5, 5, 0.820343) 58.72%, rgba(5, 5, 6, 0.792703) 80.08%, #000000 87.89%);
+  background: -o-radial-gradient(50% 45.57%, 45.97% 54.43%, rgba(23, 26, 28, 0) 0%, rgba(23, 26, 28, 0.00225974) 0.43%, rgba(4, 5, 5, 0.820343) 58.72%, rgba(5, 5, 6, 0.792703) 80.08%, #000000 87.89%);
+  background: radial-gradient(45.97% 54.43% at 50% 45.57%, rgba(23, 26, 28, 0) 0%, rgba(23, 26, 28, 0.00225974) 0.43%, rgba(4, 5, 5, 0.820343) 58.72%, rgba(5, 5, 6, 0.792703) 80.08%, #000000 87.89%);
   mix-blend-mode: normal;
 }
 
@@ -2188,14 +2214,14 @@ body {
 }
 
 @media (max-width: 1440px) {
-  .swiper-pagination-vertical {
-    margin-right: 15px;
-  }
-
   .swiper-pagination-vertical.swiper-pagination-bullets .swiper-pagination-bullet,
   .swiper-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
     width: 10px;
     height: 10px;
+  }
+
+  .swiper-pagination-vertical {
+    margin-right: 15px;
   }
 
   .header {
@@ -2332,14 +2358,71 @@ body {
   }
 
   .header__menu {
-    display: none;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #000;
+    -webkit-transition: -webkit-transform 0.4s ease 0;
+    transition: -webkit-transform 0.4s ease 0;
+    -o-transition: transform 0.4s ease 0;
+    transition: transform 0.4s ease 0;
+    transition: transform 0.4s ease 0, -webkit-transform 0.4s ease 0;
+    -webkit-transform: translateX(120%);
+        -ms-transform: translateX(120%);
+            transform: translateX(120%);
+  }
+
+  .header__menu._active {
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
+    -webkit-transition: -webkit-transform 0.4s ease 0;
+    transition: -webkit-transform 0.4s ease 0;
+    -o-transition: transform 0.4s ease 0;
+    transition: transform 0.4s ease 0;
+    transition: transform 0.4s ease 0, -webkit-transform 0.4s ease 0;
+  }
+
+  .header__menu::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background-color: #000;
+    z-index: 4;
+  }
+
+  .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 150px;
+    z-index: 1;
+    overflow-y: scroll;
+    height: 100vh;
+  }
+
+  .menu__item:not(:last-child) {
+    margin-bottom: 50px;
+    margin-right: 0;
+  }
+
+  .menu__link {
+    font-size: 25px;
   }
 
   .menu__icon {
     z-index: 5;
     display: block;
     position: relative;
-    width: 30px;
+    width: 40px;
     height: 15px;
     cursor: pointer;
     right: 0;
@@ -2609,6 +2692,7 @@ body {
 
   .btn {
     padding: 5px 15px;
+    margin-top: 5px;
   }
 
   .header__tel {
